# wayback-custom-view

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  pyproject.toml
src/ia/wayback_custom_view/: entry.py
src/ia/wayback_custom_view/templates/replay/: copy.html  jsontweet.html  jsontweetquoted.html
src/ia/wayback_custom_view/templates/test_app/: index.html
src/test_server/: __main__.py  test_app.py
src/twitter_view/: __main__.py  twitter_view_app.py
